--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;1,400&family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
+
   <header id="header">
-
     <nav class="container">
-      <a href="#" class="logo">beautysalon</a>
-      <div>...</div>
-
+      <a href="#" class="logo">beauty<span>salon</span>.</a>
+      <div class="menu">...</div>
     </nav>
-
-
   </header>
+
   <main>
     <section>
       <div class="container">
