--- a/index.html
+++ b/index.html
@@ -25,27 +25,30 @@
   </header>
 
   <main>
-    <section>
-      <div class="container">
+    <section class="section" id="home">
+      <div class="container grid">
 
-        <img
-          src="https://media.istockphoto.com/photos/hair-stylist-in-brazil-picture-id1321545990?b=1&k=20&m=1321545990&s=170667a&w=0&h=qqy04nUCXKoyTT4t3DrWPwo4311hPY42Ki3v6CujbyA="
-          alt="Hairdreser woman working " />
+        <div class="image">
+          <img
+            src="https://media.istockphoto.com/photos/hair-stylist-in-brazil-picture-id1321545990?b=1&k=20&m=1321545990&s=170667a&w=0&h=qqy04nUCXKoyTT4t3DrWPwo4311hPY42Ki3v6CujbyA="
+            alt="Hairdreser woman working " />
+        </div>
 
-        <h1 class="tittle">Saúde natural para <br> os seus cabelos </h1>
-        <p class="subtitle">Um salão exclusivo em São Paulo,<br>
-          especializado em tratamentos naturais
-        </p>
-        <a href="">Agendar um horario</a>
+        <div class="text">
+          <h1 class="tittle">Saúde natural para <br> os seus cabelos </h1>
+          <p class="subtitle">Um salão exclusivo em São Paulo,<br>
+            especializado em tratamentos naturais
+          </p>
+          <a class="button" href="">Agendar um horario</a>
+        </div>
 
       </div>
 
     </section>
+    <section class="section">otra section</section>
 
   </main>
-  <div class="container">
 
-  </div>
 </body>
 
 </html>
