--- a/index.html
+++ b/index.html
@@ -2,50 +2,71 @@
 <html lang="en">
 
 <head>
+  <!-- PAGE INFO -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NLW-Origins</title>
+
+  <!-- STYLES -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;1,400&family=Poppins:wght@400;500;700&display=swap"
     rel="stylesheet">
-
 </head>
 
 <body>
-
   <header id="header">
-    <nav class="container">
+    <nav class="container show">
       <a href="#" class="logo">beauty<span>salon</span>.</a>
-      <div class="menu">...</div>
+      <!-- menu -->
+      <div class="menu">
+        <ul class="grid">
+          <li><a class="title" href="#home">Início</a></li>
+          <li><a class="title" href="#about">Sobre</a></li>
+          <li><a class="title" href="#services">Serviços</a></li>
+          <li><a class="title" href="#testimonials">Depoimentos</a></li>
+          <li><a class="title" href="#contact">Contato</a></li>
+        </ul>
+      </div>
+      <!-- /menu -->
+      <div class="open">...</div>
+      <div class="close">X</div>
     </nav>
   </header>
 
   <main>
+    <!-- HOME -->
     <section class="section" id="home">
       <div class="container grid">
-
         <div class="image">
           <img
             src="https://media.istockphoto.com/photos/hair-stylist-in-brazil-picture-id1321545990?b=1&k=20&m=1321545990&s=170667a&w=0&h=qqy04nUCXKoyTT4t3DrWPwo4311hPY42Ki3v6CujbyA="
             alt="Hairdreser woman working " />
         </div>
-
         <div class="text">
-          <h1 class="tittle">Saúde natural para <br> os seus cabelos </h1>
+          <h2 class="title">Saúde natural para <br> os seus cabelos </h2>
           <p class="subtitle">Um salão exclusivo em São Paulo,<br>
             especializado em tratamentos naturais
           </p>
-          <a class="button" href="">Agendar um horario</a>
+          <a class="button" href="#">Agendar um horario</a>
         </div>
-
       </div>
-
     </section>
-    <section class="section">otra section</section>
+    <!-- /HOME -->
+    <div class="divider-1"></div>
+
+    <section class="section" id="about">
+      <div class="container grid">Sobre</div>
+    </section>
+
+    <section class="section" id="services">
+      <div class="container grid">Serviços</div>
+    </section>
 
   </main>
 
