--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NLW-Origins</title>
 
+  <!-- ICONS-->
+  <link rel="stylesheet" href="assets/fonts/style.css">
+
   <!-- STYLES -->
   <link rel="stylesheet" href="style.css">
 
@@ -21,7 +24,7 @@
 
 <body>
   <header id="header">
-    <nav class="container show">
+    <nav class="container ">
       <a href="#" class="logo">beauty<span>salon</span>.</a>
       <!-- menu -->
       <div class="menu">
@@ -34,8 +37,8 @@
         </ul>
       </div>
       <!-- /menu -->
-      <div class="open">...</div>
-      <div class="close">X</div>
+      <div class="toggle icon-menu"></div>
+      <div class="toggle icon-close"></div>
     </nav>
   </header>
 
