--- a/index.html
+++ b/index.html
@@ -62,13 +62,63 @@
     </section>
     <!-- /HOME -->
     <div class="divider-1"></div>
-
+    <!-- ABOUT -->
     <section class="section" id="about">
-      <div class="container grid">Sobre</div>
+      <div class="container grid">
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1614935151651-0bea6508db6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHNjaWVuY2V8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60"
+            alt="cientifica">
+        </div>
+        <div class="text">
+          <h2 class="title">sobre</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde illo beatae labore itaque a quam? Facere
+            quos autem ratione.</p>
+          <br>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo praesentium, tenetur alias sapiente facilis
+            numquam.</p>
+          <br>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a. Vitae sint sequi consequatur molestiae
+            reprehenderit similique fugiat?</p>
+          <br>
+        </div>
+      </div>
     </section>
 
+    <div class="divider-2"></div>
+
     <section class="section" id="services">
-      <div class="container grid">Serviços</div>
+      <div class="container grid">
+        <header>
+          <h2 class="title">Titulo de seccion</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur <strong>adipisicing elit.</strong> Laudantium amet ipsam ut a unde
+            eius aperiam
+            excepturi dicta, porro nihil.
+          </p>
+        </header>
+        <div class="cards">
+          <div class="card">
+            <div class="icon-woman-hair"></div>
+            <h3 class="title">titulo1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo omnis aspernatur minus aperiam doloribus
+              repellendus?
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-trim"></div>
+            <h3 class="title">titulo2</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus optio recusandae, nisi vero quaerat
+              fugit soluta repellendus maxime illo voluptatibus?</p>
+          </div>
+          <div class="card">
+            <div class="icon-cosmetic"></div>
+            <h3 class="title">titulo3</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab suscipit voluptatum adipisci magnam
+              repellendus perspiciatis illo, quam debitis sed minus.</p>
+          </div>
+        </div>
+
+      </div>
     </section>
 
   </main>
