cards , tranciciones, box shadows

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         </div>
       </div>
     </section>
-
+    <!-- /ABOUT -->
     <div class="divider-2"></div>
-
+    <!-- SERVICES -->
     <section class="section" id="services">
       <div class="container grid">
         <header>
@@ -96,22 +96,22 @@
             excepturi dicta, porro nihil.
           </p>
         </header>
-        <div class="cards">
+        <div class="cards grid">
           <div class="card">
-            <div class="icon-woman-hair"></div>
+            <i class="icon-woman-hair"></i>
             <h3 class="title">titulo1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo omnis aspernatur minus aperiam doloribus
               repellendus?
             </p>
           </div>
           <div class="card">
-            <div class="icon-trim"></div>
+            <i class="icon-trim"></i>
             <h3 class="title">titulo2</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus optio recusandae, nisi vero quaerat
               fugit soluta repellendus maxime illo voluptatibus?</p>
           </div>
           <div class="card">
-            <div class="icon-cosmetic"></div>
+            <i class="icon-cosmetic"></i>
             <h3 class="title">titulo3</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab suscipit voluptatum adipisci magnam
               repellendus perspiciatis illo, quam debitis sed minus.</p>
@@ -120,6 +120,7 @@
 
       </div>
     </section>
+    <!-- /SERVICES -->
 
   </main>
   <script src="main.js"></script>
