footer , back-to-top

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
     <section class="section" id="services">
       <div class="container grid">
         <header>
-          <h2 class="title">Titulo de seccion</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur <strong>adipisicing elit.</strong> Laudantium amet ipsam ut a unde
+          <h2 class="title">Services</h2>
+          <p class="subtitle">Lorem ipsum, dolor sit amet consectetur <strong>adipisicing elit.</strong> Laudantium amet
+            ipsam ut a unde
             eius aperiam
             excepturi dicta, porro nihil.
           </p>
@@ -213,8 +214,48 @@
       </div>
     </section>
     <!-- /CONTACT -->
+    <div class="divider-1"></div>
+
 
   </main>
+  <!-- FOOTER -->
+
+  <footer class="section" id="footer">
+    <div class="container grid">
+      <div class="brand">
+        <a href="#" class="logo">beauty<span>salon</span>.</a>
+        <p>2021 Beautysalon.</p>
+        <p>Todos los derechos Liberados.</p>
+      </div>
+      <div class="social">
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank">
+              <i class="icon-instagram"></i>
+
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/" target="_blank">
+              <i class="icon-facebook"></i>
+
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/" target="_blank">
+              <i class="icon-youtube"></i>
+
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
+  <!-- /FOOTER -->
+
+  <!-- ARROW-UP -->
+  <a href="#" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
   <!-- SWIPER -->
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
