--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container grid">
         <div class="image">
           <img
-            src="https://images.unsplash.com/photo-1614935151651-0bea6508db6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHNjaWVuY2V8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60"
+            src="https://media.istockphoto.com/photos/hair-stylist-in-brazil-picture-id1321545990?b=1&k=20&m=1321545990&s=170667a&w=0&h=qqy04nUCXKoyTT4t3DrWPwo4311hPY42Ki3v6CujbyA="
             alt="cientifica">
         </div>
         <div class="text">
@@ -227,27 +227,13 @@
         <p>2021 Beautysalon.</p>
         <p>Todos los derechos Liberados.</p>
       </div>
-      <div class="social">
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank">
-              <i class="icon-instagram"></i>
-
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/" target="_blank">
-              <i class="icon-facebook"></i>
-
-            </a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/" target="_blank">
-              <i class="icon-youtube"></i>
-
-            </a>
-          </li>
-        </ul>
+      <div class="social grid">
+        <a href="https://www.instagram.com/" target="_blank">
+          <i class="icon-instagram"></i></a>
+        <a href="https://www.facebook.com/" target="_blank">
+          <i class="icon-facebook"></i></a>
+        <a href="https://www.youtube.com/" target="_blank">
+          <i class="icon-youtube"></i></a>
       </div>
 
     </div>
